# lex

./: Makefile  dim_day_generator.py  dim_month_generator.py  dim_permit_type_generator.py  dim_year_generator.py  lex_datastores.py  lex_services.py  pyproject.toml  required_dirs.txt  runbook.txt  shell.nix
config/: ingest_lexfiles.yaml
scripts/: normalize
sql/: lex.sql  lex_db_extensions.sql  truncate_dimension_tables.sql
static_data/: FOIL2022-056-21276_NB_Edits_2019.txt  FOIL2022-056-21276_NB_Edits_2020.txt  FOIL2022-056-21276_NB_Edits_2021.txt  FOIL2022-056-21276_NB_Edits_2022.txt  input_files.txt
template_files/: shell_script_core.sh.tpl
